WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239017
Fix canvas fallback content focusability computation
https://bugs.webkit.org/show_bug.cgi?id=239017
Summary
Fix canvas fallback content focusability computation
Tim Nguyen (:ntim)
Reported
2022-04-08 14:45:19 PDT
Canvas fallback content should only be focusable if its style allows it.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-04-15 14:46:13 PDT
<
rdar://problem/91830204
>
Tim Nguyen (:ntim)
Comment 2
2022-12-16 16:25:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7790
EWS
Comment 3
2022-12-17 08:02:41 PST
Committed
258043@main
(40332c5701cc): <
https://commits.webkit.org/258043@main
> Reviewed commits have been landed. Closing PR #7790 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug