Fix canvas fallback content focusability computation https://bugs.webkit.org/show_bug.cgi?id=239017 rdar://91830204

Reviewed by Ryosuke Niwa.

Fallback content for canvas should go through all the normal checks for focusability. The only thing that differs is
that the fallback content should not be focusable if the canvas isn't.

Rename `isFocusableWithoutResolvingFullStyle` to `hasFocusableStyle` since the old name was misleading (suggests that it
is the same as `isFocusable` without resolving the full style, which isn't true).

* LayoutTests/imported/w3c/web-platform-tests/inert/inert-canvas-fallback-content-expected.txt:
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::isFocusable const):
(WebCore::Element::isFocusableWithoutResolvingFullStyle const): Deleted.
* Source/WebCore/dom/Element.h:
* Source/WebCore/html/HTMLAreaElement.cpp:
(WebCore::HTMLAreaElement::isFocusable const):

Canonical link: https://commits.webkit.org/258043@main